--- a/jpa/jpa/src/main/resources/application.properties
+++ b/jpa/jpa/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=jpa
+
+# H2 configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
