--- a/jpa/jpa/src/main/resources/application.properties
+++ b/jpa/jpa/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.h2.console.enabled=true
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+spring.jpa.open-in-view=false
