--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=jpa
+spring.application.name=orders
+server.port=8080
 
 # H2 configuration
 spring.datasource.url=jdbc:h2:mem:orders
