--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.jpa.open-in-view=false
+
+# app.envs.client.host --> Cómo lo interpreto a nivel de esta aplicación Springboot
+#  ${CLIENT_HOST} --> ¿Cómo lo interpreto a nivel de sistema? EL que va a inyectar al env cómo la va a conocer
+app.envs.client.host=${CLIENT_HOST}
